@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE tellico PUBLIC '-//Robby Stephenson/DTD Tellico V11.0//EN' 'http://periapsis.org/tellico/dtd/v11/tellico.dtd'>
+<tellico xmlns="http://periapsis.org/tellico/" syntaxVersion="11">
+ <collection type="1" title="My Collection">
+  <fields>
+   <field category="Personal" flags="32" type="6" description="" name="id" format="4" title="ID">
+    <prop name="template">%{@id}</prop>
+   </field>
+   <field category="General" flags="8" type="1" description="" name="title" format="1" title="Title"/>
+   <field category="General" flags="0" type="7" description="New Field 1" name="url" format="4" title="URL">
+    <prop name="relative">true</prop>
+   </field>
+  </fields>
+  <entry id="1">
+   <id>1</id>
+   <title>test</title>
+   <url>collectorz/image.png</url>
+  </entry>
+ </collection>
+</tellico>
