@@ -1,3 +1,7 @@
+2021-04-25  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed relative links in the Entry View (Bug 436071).
+
 2021-04-14  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated DBC data source.
